# beautiful-photometry

./: .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  README_NEW_FEATURES.md  README_WEB.md  app.py  beautiful-photometry.ipynb  circadian.py  docker-compose.yml  human_circadian.py  human_visual.py  load_spd_to_csv.py  plot.py  pyproject.toml  quick_start.sh  requirements.txt  run-docker.sh  source_illuminants.csv  spectrum.py  start.sh  test_spd.csv
.ipynb_checkpoints/: beautiful-photometry-checkpoint.ipynb
CSVs/: GE_Align_PM.csv  GasMantle_High.xls  L_Cone.csv  M_Cone.csv  S_Cone.csv  Standard Illuminants.csv  bedtime_bulb_20190507.csv  daylight.csv  fluxometer_ipadpro_1200K.csv  halogen.csv  incandescent.csv  led2700.csv  melanopic_spd.csv  moonlight.csv  palmetto_gas_lights.xls  photopic_spd.csv  rhodopic.csv  scotopic_spd.csv  shawn.xls  test_spd.csv  visual_spd.csv
CSVs/2019_casper/: Casper Glow High.xls
CSVs/2019_guangzhou/: Bridgelux Thrive 4000K.xls  Bridgelux Thrive 5000K.xls  Bridgelux Thrive 6500K.xls  EStar 97CRI 3000K.xls  EStar 97CRI 4000K.xls  Mosquito Lamp.xls  Philips Warm Glow 2700K.xls
CSVs/2019_happylight/: HappyLight.csv
CSVs/2019_lightfair/: Bios Low Blue 3000K.xls  Cedar 2200K Outdoor.xls  Keyart 1800K.xls  Lumileds Amber.xls  Lumileds PC Amber.xls  Nichia 80 CRI.xls  Nichia Optisolis 5000K.xls  Osram Osconiq 3000K.xls  Osram PC Yellow.xls  Osram Yellow.xls  Seoul Sunlike 3000K.xls  Soraa Vivid 1.xls  Soraa Vivid 2.xls  Yuji 1800K.xls
CSVs/2019_lowblue/: BB.xls  Lohas.xls  SCS.xls  Soraa.xls
CSVs/2020_nightmodes/: iphone_nightshift.xls  iphone_std.xls  mbp_flux.xls  mbp_nightshift.xls  mbp_std.xls  pixel_nightlight.xls  tv_moviemode.xls
CSVs/dyson/: Dyson_2700.csv  Dyson_6500.csv
CSVs/filters/: blutech_clear.csv  gamma_ray_computer_yellow.csv  lowbluelights_orange.csv  uvex_sct_orange.csv
backend/: Dockerfile  app.py  requirements.txt
backend/CSVs/examples/: GasMantle_Low.xls  LCone.csv  candle.csv  fluxometer_ipadpro_6500K.csv  lsg.csv  soraa.csv
backend/src/beautiful_photometry/: app.py  plot.py
docs/: README.md
examples/: 2019-04-10 Dyson Lightcycle.ipynb  2019-05-25 Lightfair.ipynb  2019-06-26 Guangzhou.ipynb  2019-08-27 Low Blue.ipynb  2019-09-23 Casper Glow.ipynb  2019-12-04 HappyLight.ipynb  2019-12-09 Bedtime Bulb vs Traditional.ipynb  2020-01-25 Gas Lamps.ipynb  2020-02-01 Flat Spectra.ipynb  2020-10-10 Night Modes.ipynb  beautiful_photometry.ipynb
examples/.ipynb_checkpoints/: 2019-04-10 Dyson Lightcycle-checkpoint.ipynb  2019-05-25 Lightfair-checkpoint.ipynb  2019-06-26 Guangzhou-checkpoint.ipynb  2019-08-27 Low Blue-checkpoint.ipynb  2019-09-23 Casper Glow-checkpoint.ipynb  2020-01-25 Gas Lamps-checkpoint.ipynb  beautiful_photometry-checkpoint.ipynb
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
src/: human_circadian.py  photometer.py  plot.py  r_values.py  spectrum.py
src/beautiful_photometry/: __init__.py  __main__.py  app.py  cli.py  human_circadian.py  human_visual.py  plot.py  spectrum.py  web.py
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_spectrum.py
ts-backend/: Dockerfile  package-lock.json  package.json
ts-backend/src/: index.ts  test-cri-debug.ts  test-cri-detailed.ts  test-cri.ts
(+57 files in other folders)
